Sprays now appear larger as they age. Spatters now have 100% of their initial alpha value.